portrait/examples/engraver-demo/rejected/CrossCallVault.portrait
// CrossCallVault — REJECT fixture (out of subset).
// Solidity equivalent:
//   contract CrossCallVault {
//     function drain(address strategy, bytes data) external {
//       strategy.call(data);   // synchronous cross-contract call
//     }
//   }
// A synchronous cross-contract call (`.call(...)`) requires an account model or
// vProg composition; it is not UTXO-native. `portrait engrave` MUST reject this
// fail-loud, naming the `call` construct and routing it to the vProgs layer
// (SUBSET-V0 §3 item 3).
pragma portrait ^0.1.0;

app CrossCallVault {
  role vault {
    param int balance;

    state { int balance; }

    #[covenant(mode = transition)]
    entrypoint function drain(int amount) : (int balance) {
      strategy.call(payload);   // synchronous cross-contract call — REJECT
      return balance - amount;
    }
  }

  lifecycle { live -> live via vault.drain; }
  invariant no_undeclared_state;
}
